<resources>
    <string name="app_name">Instant Currencies</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dismiss">Dismiss</string>
    <string name="ignore">Ignore</string>
    <string name="apply">Apply</string>
    <string name="select_sources">Select Sources</string>
    <string name="refresh">Refresh</string>
    <string name="sources">Sources</string>
    <string name="sure">Sure</string>
    <string name="dollar_tl_graph">Dollar / TL Graph</string>
    <string name="euro_tl_graph">Euro / TL Graph</string>
    <string name="euro_usd_graph">Euro / Dollar Graph</string>
    <string name="clear_sure_message">Sure to refresh. All data will be cleared.</string>
    <string name="time_interval">Time Interval</string>
    <string name="select_time_interval">Select Update Interval</string>
    <string name="select_graph_using_side_menu">Select the graph using side menu</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="select_graph_type">Select Graph Type</string>
    <string name="select_at_least_one_source">Select at least one source.</string>
    <string name="remove">Remove</string>
    <string name="remove_source_approve">Remove selected source?</string>
    <string name="interval_hint"> • Data update interval <b>%s</b></string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add">Add</string>
    <string name="enter_value">Enter Value</string>
    <string name="check_value">Check Value</string>
    <string name="is_below_value">%1$s value drop below %2$s</string>
    <string name="is_above_val">%1$s value reached above %2$s</string>
    <string name="if_below">If below value</string>
    <string name="if_above">If above value</string>
    <string name="alarms">Alarms</string>
    <string name="graphic">Graph</string>
    <string name="graph_types">Graph Types</string>
    <string name="others">Others</string>
    <string name="ons_try" translatable="false">ONS/TRY</string>
    <string name="ons">Ons</string>
    <string name="have_no_alarms">You have no alarms set.</string>
    <string name="ons_dollar_grapsh">Ons / Dollar Graph</string>
    <string name="max_alarm_message">En fazla % alarm ekleyebilirsiniz.</string>
    <string name="rate_types">Types</string>

    <plurals name="sec_short">
        <item quantity="one">%d sec</item>
        <item quantity="other">%d secs</item>
    </plurals>
    <plurals name="min_short">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
</resources>
