<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp">

    <RelativeLayout
        android:id="@+id/v_drawer_header"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:id="@+id/iv_handle"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_marker_4dp"
            android:contentDescription="@null" />

        <ImageView
            android:id="@+id/iv_drawer_header_logo"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_below="@+id/iv_handle"
            android:contentDescription="@null"
            android:src="@drawable/ic_store_icon_24dp"
            android:tint="?iconTintColor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_handle"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/iv_drawer_header_logo"
            android:layout_toRightOf="@+id/iv_drawer_header_logo"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/app_name"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/v_navdrawer_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="13sp"
                tools:text="v0.4.7" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/v_drawer_header"
        android:background="@color/colorPrimary" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_drawer_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:padding="6dp"
                android:text="@string/graph_types"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/v_drawer_item_usd"
                style="@style/side_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_dollar"
                android:text="USD" />

            <TextView
                android:id="@+id/v_drawer_item_eur"
                style="@style/side_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_euro"
                android:text="EURO" />

            <TextView
                android:id="@+id/v_drawer_item_eur_usd"
                style="@style/side_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_exchange_eur_usd"
                android:text="EURO / USD" />

            <TextView
                android:id="@+id/v_drawer_item_ons"
                style="@style/side_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_gold"
                android:text="ONS" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:padding="6dp"
                android:text="@string/others"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/v_drawer_item_alarms"
                style="@style/side_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_add_alarm_white_24dp"
                android:text="@string/alarms" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>
